--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ repository = "https://github.com/o0Ignition0o/crawl-rs"
 documentation = "https://docs.rs/crawl-rs/"
 
 [dependencies]
-futures = "*"
-hyper = "*"
-tokio-core = "*"
+futures = "0.1"
+hyper = "0.11"
+hyper-tls = "*"
+tokio-core = "0.1"
 serde_json = "*"
